--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd6f9b">  <td>26/01/05 15:47:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_02_QuantityDecrease()[pri:2, instance:TestPages.MiniCartTest@5149d738]">TC_02_QuantityDecrease</td> 
-  <td>main@2032169857</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/05 15:47:29</td>   <td>-8023</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MiniCartTest.initFlow()[pri:0, instance:TestPages.MiniCartTest@5149d738]">&gt;&gt;initFlow</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2032169857</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/05 15:47:41</td>   <td>3569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_03_EnterPincode()[pri:3, instance:TestPages.MiniCartTest@5149d738]">TC_03_EnterPincode</td> 
-  <td>main@2032169857</td>   <td></td> </tr>
-<tr bgcolor="8dad64">  <td>26/01/05 15:47:05</td>   <td>-32591</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.MiniCartTest@5149d738]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2032169857</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/05 15:47:32</td>   <td>-5076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_01_QuantityIncrease()[pri:1, instance:TestPages.MiniCartTest@5149d738]">TC_01_QuantityIncrease</td> 
-  <td>main@2032169857</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/05 15:47:41</td>   <td>3740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_04_ClickOnCheckout()[pri:4, instance:TestPages.MiniCartTest@5149d738]">TC_04_ClickOnCheckout</td> 
-  <td>main@2032169857</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 11:00:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutTest.initFlow()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;initFlow</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263668904</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:49</td>   <td>79885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_02_fillCheckoutForm()[pri:2, instance:TestPages.CheckoutTest@6bbe85a8]">TC_02_fillCheckoutForm</td> 
+  <td>main@1263668904</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:48</td>   <td>79813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_01_verifyCheckoutPage()[pri:1, instance:TestPages.CheckoutTest@6bbe85a8]">TC_01_verifyCheckoutPage</td> 
+  <td>main@1263668904</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:56</td>   <td>87478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_03_clickPayNow()[pri:3, instance:TestPages.CheckoutTest@6bbe85a8]">TC_03_clickPayNow</td> 
+  <td>main@1263668904</td>   <td></td> </tr>
+<tr bgcolor="8dad64">  <td>26/01/14 11:00:23</td>   <td>-5265</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263668904</td>   <td></td> </tr>
 </table>
