--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,38 +1,78 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:38:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_04_ClickOnStrapColorFilter()[pri:4, instance:TestPages.PLPTest@5149d738]">TC_04_ClickOnStrapColorFilter</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:38:41</td>   <td>-10408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_03_ClickOnDialColorFilter()[pri:3, instance:TestPages.PLPTest@5149d738]">TC_03_ClickOnDialColorFilter</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="8dad64">  <td>26/01/07 17:37:53</td>   <td>-57538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.PLPTest@5149d738]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:38:20</td>   <td>-31398</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PLPTest.init()[pri:0, instance:TestPages.PLPTest@5149d738]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:38:20</td>   <td>-31381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_01_ClickOnDialShapeFilter()[pri:1, instance:TestPages.PLPTest@5149d738]">TC_01_ClickOnDialShapeFilter</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:39:07</td>   <td>16269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_05_ClickOnFirstProduct()[pri:5, instance:TestPages.PLPTest@5149d738]">TC_05_ClickOnFirstProduct</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/07 17:38:30</td>   <td>-20808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_02_ClickOnAttachmentTypeFilter()[pri:2, instance:TestPages.PLPTest@5149d738]">TC_02_ClickOnAttachmentTypeFilter</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="657fa3">  <td>26/01/07 17:40:17</td>   <td>85601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PDPTest.TC_01_clickOnRecommondedProducts()[pri:1, instance:TestPages.PDPTest@6440112d]">TC_01_clickOnRecommondedProducts</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="8dad64">  <td>26/01/07 17:39:30</td>   <td>39076</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.PDPTest@6440112d]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="657fa3">  <td>26/01/07 17:40:30</td>   <td>99266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PDPTest.TC_02_AddProductInCart()[pri:2, instance:TestPages.PDPTest@6440112d]">TC_02_AddProductInCart</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="657fa3">  <td>26/01/07 17:39:54</td>   <td>62739</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PDPTest.init()[pri:0, instance:TestPages.PDPTest@6440112d]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>26/01/07 17:41:33</td>   <td>161930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_04_ClickOnCheckout()[pri:4, instance:TestPages.MiniCartTest@8462f31]">TC_04_ClickOnCheckout</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>26/01/07 17:41:33</td>   <td>161733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_03_EnterPincode()[pri:3, instance:TestPages.MiniCartTest@8462f31]">TC_03_EnterPincode</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="8dad64">  <td>26/01/07 17:40:33</td>   <td>101750</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.MiniCartTest@8462f31]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>26/01/07 17:40:57</td>   <td>125639</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MiniCartTest.initFlow()[pri:0, instance:TestPages.MiniCartTest@8462f31]">&gt;&gt;initFlow</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>26/01/07 17:41:29</td>   <td>157591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_02_QuantityDecrease()[pri:2, instance:TestPages.MiniCartTest@8462f31]">TC_02_QuantityDecrease</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="737fd5">  <td>26/01/07 17:41:22</td>   <td>151152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_01_QuantityIncrease()[pri:1, instance:TestPages.MiniCartTest@8462f31]">TC_01_QuantityIncrease</td> 
-  <td>main@548554586</td>   <td></td> </tr>
+<tr bgcolor="cde7cc">  <td>26/01/14 12:58:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_01_verifyCheckoutPage()[pri:1, instance:TestPages.CheckoutTest@68c9133c]">TC_01_verifyCheckoutPage</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_02_ClickOnAttachmentTypeFilter()[pri:2, instance:TestPages.PLPTest@909217e]">TC_02_ClickOnAttachmentTypeFilter</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>26/01/14 12:58:05</td>   <td>-4955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PDPTest.TC_02_AddProductInCart()[pri:2, instance:TestPages.PDPTest@18271936]">TC_02_AddProductInCart</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.GoToMensNewArrivalCategory()[pri:8, instance:TestPages.HomeTest@8519cb4]">GoToMensNewArrivalCategory</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_03_ClickOnDialColorFilter()[pri:3, instance:TestPages.PLPTest@909217e]">TC_03_ClickOnDialColorFilter</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:03</td>   <td>-7267</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.PDPTest@18271936]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>26/01/14 12:58:05</td>   <td>-4974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PDPTest.TC_01_clickOnRecommondedProductsList()[pri:1, instance:TestPages.PDPTest@18271936]">TC_01_clickOnRecommondedProductsList</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:57:39</td>   <td>-31352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickOnWomenBestSellerShopnowButton()[pri:2, instance:TestPages.HomeTest@8519cb4]">clickOnWomenBestSellerShopnowButton</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickOnAllProductsLatestRelease()[pri:4, instance:TestPages.HomeTest@8519cb4]">clickOnAllProductsLatestRelease</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="686771">  <td>26/01/14 12:58:08</td>   <td>-2672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_04_ClickOnCheckoutButton()[pri:4, instance:TestPages.MiniCartTest@606e4010]">TC_04_ClickOnCheckoutButton</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="686771">  <td>26/01/14 12:58:08</td>   <td>-2695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_01_QuantityIncrease()[pri:1, instance:TestPages.MiniCartTest@606e4010]">TC_01_QuantityIncrease</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7324</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PLPTest.init()[pri:0, instance:TestPages.PLPTest@909217e]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.ClickOnPopularCategories()[pri:6, instance:TestPages.HomeTest@8519cb4]">ClickOnPopularCategories</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickOnAllLowStockProductCategories()[pri:5, instance:TestPages.HomeTest@8519cb4]">clickOnAllLowStockProductCategories</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:00</td>   <td>-10080</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownClass()[pri:0, instance:TestPages.HomeTest@8519cb4]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_04_ClickOnStrapColorFilter()[pri:4, instance:TestPages.PLPTest@909217e]">TC_04_ClickOnStrapColorFilter</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:05</td>   <td>-4913</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.MiniCartTest@606e4010]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="cde7cc">  <td>26/01/14 12:58:10</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutTest.initFlow()[pri:0, instance:TestPages.CheckoutTest@68c9133c]">&gt;&gt;initFlow</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:10</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownClass()[pri:0, instance:TestPages.CheckoutTest@68c9133c]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:57:15</td>   <td>-55144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.setUpHomePage()[pri:0, instance:TestPages.HomeTest@8519cb4]">&gt;&gt;setUpHomePage</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:01</td>   <td>-9691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.PLPTest@909217e]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:03</td>   <td>-7269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownClass()[pri:0, instance:TestPages.PLPTest@909217e]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_05_ClickOnFirstProduct()[pri:5, instance:TestPages.PLPTest@909217e]">TC_05_ClickOnFirstProduct</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="da8dc5">  <td>26/01/14 12:58:03</td>   <td>-7306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PLPTest.TC_01_ClickOnDialShapeFilter()[pri:1, instance:TestPages.PLPTest@909217e]">TC_01_ClickOnDialShapeFilter</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:56:50</td>   <td>-80186</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.HomeTest@8519cb4]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:05</td>   <td>-4920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownClass()[pri:0, instance:TestPages.PDPTest@18271936]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="cde7cc">  <td>26/01/14 12:58:10</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_03_clickPayNow()[pri:3, instance:TestPages.CheckoutTest@68c9133c]">TC_03_clickPayNow</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>26/01/14 12:58:05</td>   <td>-4977</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PDPTest.init()[pri:0, instance:TestPages.PDPTest@18271936]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="686771">  <td>26/01/14 12:58:08</td>   <td>-2679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_03_EnterPincode()[pri:3, instance:TestPages.MiniCartTest@606e4010]">TC_03_EnterPincode</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="686771">  <td>26/01/14 12:58:08</td>   <td>-2724</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MiniCartTest.initFlow()[pri:0, instance:TestPages.MiniCartTest@606e4010]">&gt;&gt;initFlow</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:08</td>   <td>-2667</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownClass()[pri:0, instance:TestPages.MiniCartTest@606e4010]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickLatestReleaseProduct()[pri:3, instance:TestPages.HomeTest@8519cb4]">clickLatestReleaseProduct</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:57:15</td>   <td>-55122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickOnMenBestSellerShopNowButton()[pri:1, instance:TestPages.HomeTest@8519cb4]">clickOnMenBestSellerShopNowButton</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="686771">  <td>26/01/14 12:58:08</td>   <td>-2685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiniCartTest.TC_02_QuantityDecrease()[pri:2, instance:TestPages.MiniCartTest@606e4010]">TC_02_QuantityDecrease</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="cde7cc">  <td>26/01/14 12:58:10</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_02_fillCheckoutForm()[pri:2, instance:TestPages.CheckoutTest@68c9133c]">TC_02_fillCheckoutForm</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="a4858c">  <td>26/01/14 12:58:08</td>   <td>-2666</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.CheckoutTest@68c9133c]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1473981203</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 12:58:00</td>   <td>-10132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.clickOnLeatherWatchMenShopNowButton()[pri:7, instance:TestPages.HomeTest@8519cb4]">clickOnLeatherWatchMenShopNowButton</td> 
+  <td>main@1473981203</td>   <td></td> </tr>
 </table>
