--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
-<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>11 methods:<br/>
+<td>1 test</td>
+<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
+<td>22 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,24 +22,8 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>PLPTest (4/1/0)</td><td valign='top' align='right'>
-  <a href='PLPTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>iniCartTest (3/1/0)</td><td valign='top' align='right'>
-  <a href='iniCartTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>PDPTest (2/0/0)</td><td valign='top' align='right'>
-  <a href='PDPTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Test (0/8/14)</td><td valign='top' align='right'>
+  <a href='Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
