--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_01_verifyCheckoutPage()[pri:1, instance:TestPages.CheckoutTest@6bbe85a8]">TC_01_verifyCheckoutPage</td> 
+<tr bgcolor="bd6f9b">  <td>26/01/14 14:07:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_01_verifyCheckoutPage()[pri:1, instance:TestPages.CheckoutTest@6bbe85a8]">TC_01_verifyCheckoutPage</td> 
   <td>main@1263668904</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:49</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_02_fillCheckoutForm()[pri:2, instance:TestPages.CheckoutTest@6bbe85a8]">TC_02_fillCheckoutForm</td> 
+<tr bgcolor="bd6f9b">  <td>26/01/14 14:07:46</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_02_fillCheckoutForm()[pri:2, instance:TestPages.CheckoutTest@6bbe85a8]">TC_02_fillCheckoutForm</td> 
   <td>main@1263668904</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/14 11:01:56</td>   <td>7665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_03_clickPayNow()[pri:3, instance:TestPages.CheckoutTest@6bbe85a8]">TC_03_clickPayNow</td> 
+<tr bgcolor="bd6f9b">  <td>26/01/14 14:07:53</td>   <td>7565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.TC_03_clickPayNow()[pri:3, instance:TestPages.CheckoutTest@6bbe85a8]">TC_03_clickPayNow</td> 
   <td>main@1263668904</td>   <td></td> </tr>
-<tr bgcolor="bd6f9b">  <td>26/01/14 11:00:29</td>   <td>-79813</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutTest.initFlow()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;initFlow</td> 
+<tr bgcolor="bd6f9b">  <td>26/01/14 14:07:58</td>   <td>12649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.VerifyCheckoutEnable()[pri:4, instance:TestPages.CheckoutTest@6bbe85a8]">VerifyCheckoutEnable</td> 
+  <td>main@1263668904</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>26/01/14 14:06:47</td>   <td>-59081</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutTest.initFlow()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;initFlow</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263668904</td>   <td></td> </tr>
-<tr bgcolor="8dad64">  <td>26/01/14 11:00:23</td>   <td>-85078</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="8dad64">  <td>26/01/14 14:06:22</td>   <td>-83951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpClass()[pri:0, instance:TestPages.CheckoutTest@6bbe85a8]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263668904</td>   <td></td> </tr>
 </table>
